---------------------------------------------------------------------------
                         NiKom v2.1.1, 2016-04-16
---------------------------------------------------------------------------
Fixing three bugs in 2.1.0.
- It wasn't possible to send Fido mail. It would just say that it didn't
  recognize the zone.
- The "next text" command would display the wrong text in Fido forums.
- When you got a prompt saying you should go to the mailbox, nothing
  would happen.

---------------------------------------------------------------------------
                         NiKom v2.1.0, 2016-04-06
---------------------------------------------------------------------------
- Overhauled startup of NiKServer and the code that reads configuration
  and data files. The configuration files are better checked for errors
  and NiKServer will shut down if something can not be properly loaded
  instead of starting up with incomplete or corrupt data. Older
  installations of NiKom most likely has entries in some configuration
  files that are deprecated. NiKServer will now complain over this and
  they will need to be removed for NiKServer to start up.

  The default configuration files have changed format a bit so that
  all configuration entries are in English. Comments now start with
  the standard '#' instead of '*'. It should be fully compatible with
  the old configuration files though. (Except for unused things that
  need to be removed.) For the new format see the default configurations
  that come with the NiKom full distribution.

- Removed the implementation of "program data" where ARexx scripts can
  store custom data for a user by calling AddProgramData() and
  GetProgramData(). The current implementation was simply not working
  (see https://github.com/punktniklas/NiKom/issues/7 for details) and
  there is likely no one using it.
  If functions like this are needed in future it's probably better to