@@ -48,3 +48,13 @@ DEFAULTORIGIN = Min BBS, 08-1234567, telnet bbs.min.com
 # The status level that is required to send netmail as crashmail.
 
 CRASHSTATUS = 90
+
+# This option controls how NiKom reads 16 bit values from .msg files.
+# FTS (FidoNet Technical Standard) mandates that 16 bit values are stored
+# in little endian format (with the lowest order bits in the first byte),
+# the way that x86 processors handle it. However it seems like tossers
+# for AmigaOS usually violates this and store values in big endian format,
+# the way 680x0 processors handle it. Set this to "BIG_ENDIAN" to be
+# compatible with Amiga tossers and "LITTLE_ENDIAN" to be compatible with
+# tossers that actually follow the standard. (Intentionally or not..)
+MESSAGE_BYTE_ORDER = BIG_ENDIAN
